:bug: StyleBox overflowing

--- a/styles/StyleBox.module.css
+++ b/styles/StyleBox.module.css
@@ -1,5 +1,5 @@
 #content {
-  width: 500px;
+  width: 80%;
   height: 100px;
   box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
